Fixed hamburger on Chrome, page transitions and active link status

--- a/how-we-do-it.html
+++ b/how-we-do-it.html
@@ -53,7 +53,7 @@
 			  <a class="nav-link" href="what-we-do.html">What we do</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link nav-padding-left" href="how-we-do-it.html">How we do it</a>
+			  <a class="nav-link nav-padding-left active" href="how-we-do-it.html">How we do it</a>
 			</li>   
 		  </ul>
 		  
