--- a/contact-us.html
+++ b/contact-us.html
@@ -69,7 +69,7 @@
 			  <a class="nav-link nav-padding-right" href="who-we-are.html">Who we are</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="contact-us.html">Contact us</a>
+			  <a class="nav-link active" href="contact-us.html">Contact us</a>
 			</li>   
 		  </ul>
 			 
@@ -85,7 +85,7 @@
 	
 	  
 
-	    <div class="container-page-contact-alignment page-transition blur">
+	    <div class="container-page-contact-alignment page-transition-contact blur">
 	      	
 					<div class="row">
 					  <div class="contact-details-align container-page-contact col-lg-4 contact-page-details-align offset-xl-0 offset-lg-1 col-xl-4 col-sm-8 offset-md-1 col-md-7">&nbsp;
