--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
  <div class="container-fluid hero-img-mobile position-fixed"><img src="images/Mobile/Group 51@2x.png" alt="images of lighthouse and ship" class="img-fluid">
   </div>						 
 				  			  
-  <div class="container-fluid page-transition intro-padding">
+  <div class="container-fluid page-transition-index intro-padding">
     <div class="container hero-text">
 					<div class="row text-left">
 						  <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12"><p class="text-heading" >Navigate your crew towards</p><h1>Excellence</h1></div>
