--- a/what-we-do.html
+++ b/what-we-do.html
@@ -50,7 +50,7 @@
 			
 			<ul class="navbar-nav navbar-nav-center navbar-nav-top">
 			  <li class="nav-item">
-				<a class="nav-link" href="what-we-do.html">What we do</a>
+				<a class="nav-link active" href="what-we-do.html">What we do</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link nav-padding-left" href="how-we-do-it.html">How we do it</a>
