Add hover effect on logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="blur">
 		<ul class="navbar-nav navbar-logo navbar-logo--mobile">
 			<li class="nav-item">
-				<a href="index.html" class="navbar-brand-nav"><img src="images/logo_nav.png" width="60px" alt="seven+ e-Training logo"></a>
+				<a href="index.html" class="navbar-brand-nav logo"></a>
 			</li>   
 		</ul>
 	</div>
@@ -55,7 +55,7 @@
 	  
 	  <ul class="navbar-nav navbar-logo">
         <li class="nav-item">
-			<a href="index.html" class="navbar-brand-nav"><img src="images/logo_nav.png" alt="seven+ e-Training logo"></a>
+			<a href="index.html" class="navbar-brand-nav logo"></a>
         </li>   
 	  </ul>
       
