Prelod hover image

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           <a class="nav-link" href="contact-us.html">Contact us</a>
         </li>   
       </ul>
-         
+    	<!-- Preloding hover image -->
+	   	<img src="images/logo_nav-hover.png" style="display: none;" alt="seven+ e-Training logo hover"> 
     </div>
   </div>
- 
 	  
   </nav> 
 
