Add active links

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -67,7 +67,7 @@
       
       <ul class="navbar-nav navbar-nav-center navbar-nav-bottom">
         <li class="nav-item">
-          <a class="nav-link nav-padding-right" href="who-we-are.html">Who we are</a>
+          <a class="nav-link nav-padding-right active" href="who-we-are.html">Who we are</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact-us.html">Contact us</a>
