--- a/contact-us.html
+++ b/contact-us.html
@@ -69,7 +69,7 @@
           <a class="nav-link nav-padding-right" href="who-we-are.html">Who we are</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact-us.html">Contact us</a>
+          <a class="nav-link active" href="contact-us.html">Contact us</a>
         </li>   
       </ul>
     	<!-- Preloding hover image -->
