Wait image to load before animations

--- a/benefits.html
+++ b/benefits.html
@@ -82,7 +82,7 @@
 	  
 	  
 	  
- <div class="container-page-benefit-alignment page-transition blur">
+ <div class="box container-page-benefit-alignment page-transition blur">
 	 
    <div class="container-page-benefit container-padding">
      <div class="container">    
@@ -216,7 +216,7 @@
 	  
 	  
 	  
-  <div class="container-fluid container-footer-bg">
+  <div class="box container-fluid container-footer-bg">
 	    <div class="container container-footer-padding">
 	      
 			
