--- a/how-we-do-it.html
+++ b/how-we-do-it.html
@@ -81,7 +81,7 @@
 
   
 	  
-  <div class="container-page-how page-transition blur">
+  <div class="box container-page-how page-transition blur">
 	    <div class="container container-padding">
 		  			<div class="row">
 								<div class="col-xl-12"><h2>How we do it</h2></div>
@@ -133,7 +133,7 @@
 	  
 	  
 	  
-	  <div class="container-fluid container-footer-bg">
+	  <div class="box container-fluid container-footer-bg">
 	    <div class="container container-footer-padding">
 	      
 			
