--- a/what-we-do.html
+++ b/what-we-do.html
@@ -82,7 +82,7 @@
  
 	 
 	  
-  <div class="container-page-what page-transition blur">
+  <div class="box container-page-what page-transition blur">
 	    <div class="container container-padding">
 					  
 					<div class="row">
@@ -121,7 +121,7 @@
 	  
 	  
 	  
-	  <div class="container-fluid container-footer-bg">
+	  <div class="box container-fluid container-footer-bg">
 	    <div class="container container-footer-padding">
 	      
 			
