--- a/contact-us.html
+++ b/contact-us.html
@@ -85,7 +85,7 @@
 	
 	  
 
-	    <div class="container-page-contact-alignment page-transition-contact blur">
+	    <div class="box container-page-contact-alignment page-transition-contact blur">
 	      	
 					<div class="row">
 					  <div class="contact-details-align container-page-contact col-lg-4 contact-page-details-align offset-xl-0 offset-lg-1 col-xl-4 col-sm-8 offset-md-1 col-md-7">&nbsp;
@@ -145,7 +145,7 @@
 	  
 	  
 	  
-	  <div class="container-fluid container-footer-bg">
+	  <div class="box container-fluid container-footer-bg">
 	    <div class="container container-footer-padding">
 	      
 			
