--- a/who-we-are.html
+++ b/who-we-are.html
@@ -80,7 +80,7 @@
 	  
   </nav> 
 	  
- <div class="container-page-who-alignment page-transition blur">
+ <div class="box container-page-who-alignment page-transition blur">
 	 
    <div class="container-page-who">
      <div class="container container-padding-who">
@@ -176,7 +176,7 @@
 	  
 	  
 	  
-  <div class="container-fluid container-footer-bg">
+  <div class="box container-fluid container-footer-bg">
 	    <div class="container container-footer-padding">
 	      
 			
