Add fade animation to hero image

--- a/benefits.html
+++ b/benefits.html
@@ -22,7 +22,7 @@
   <body>
 
 
-<div class="container-fluid img-benefit position-fixed">
+<div class="container-fluid box img-benefit position-fixed">
  </div>
 
 
