--- a/how-we-do-it.html
+++ b/how-we-do-it.html
@@ -22,7 +22,7 @@
   <body>
 
 
-<div class="container-fluid img-how position-fixed"></div>
+<div class="container-fluid box img-how position-fixed"></div>
 	
 	  
 	
