--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	  
 	  
 	  
-  <div class="container-fluid hero-img position-fixed"><img src="images/hero-img5.png" alt="images of lighthouse and ship" class="img-fluid">
+  <div class="container-fluid hero-img box position-fixed"><img src="images/hero-img5.png" alt="images of lighthouse and ship" class="img-fluid">
   </div>
  
  <div class="container-fluid hero-img-mobile position-fixed"><img src="images/Mobile/Group 51@2x.png" alt="images of lighthouse and ship" class="img-fluid">
