--- a/what-we-do.html
+++ b/what-we-do.html
@@ -22,7 +22,7 @@
   <body>
 
 
-<div class="container-fluid img-what position-fixed"></div>
+<div class="container-fluid box img-what position-fixed"></div>
 	
 	  
 	
