--- a/who-we-are.html
+++ b/who-we-are.html
@@ -22,7 +22,7 @@
   <body>
 
 
-<div class="container-fluid img-who position-fixed">
+<div class="container-fluid box img-who position-fixed">
  </div>
 
 
