--- a/contact-us.html
+++ b/contact-us.html
@@ -22,7 +22,7 @@
   <body>
 
 
-<div class="container-fluid img-contact position-fixed">
+<div class="container-fluid box img-contact position-fixed">
  </div>
 	
 	  
