--- a/index.html
+++ b/index.html
@@ -80,11 +80,19 @@
 	  
 	  
 	  
-  <div class="container-fluid hero-img box position-fixed"><img src="images/hero-img5.png" alt="images of lighthouse and ship" class="img-fluid">
+  <div class="container-fluid hero-img box position-fixed"><img
+	src="images/hero-img5.png" 
+	srcset="images/hero-img5.png 993w,
+	images/Mobile/Group51@2x.png 992w"
+	sizes="(max-width: 992px) 992px,
+	(max-width: 992px) 993px"
+	alt="images of lighthouse and ship"
+	class="img-fluid"
+	>
   </div>
  
- <div class="container-fluid hero-img-mobile position-fixed"><img src="images/Mobile/Group 51@2x.png" alt="images of lighthouse and ship" class="img-fluid">
-  </div>						 
+ <!-- <div class="container-fluid hero-img-mobile box position-fixed"><img src="images/Mobile/Group 51@2x.png" alt="images of lighthouse and ship" class="img-fluid">
+  </div>						  -->
 				  			  
   <div class="box container-fluid page-transition-index intro-padding">
     <div class="container hero-text">
