--- a/benefits.html
+++ b/benefits.html
@@ -84,7 +84,7 @@
 	  
  <div class="box container-page-benefit-alignment page-transition blur">
 	 
-   <div class="container-page-benefit container-padding">
+  <div class="container-page-benefit container-padding">
      <div class="container">    
        <div class="row">
          <div class="col-xl-12"><h2>HOW E-TRAINING WILL IMPACT YOUR CREW AND OPERATION</h2></div>
@@ -107,7 +107,7 @@
        <div class="col-lg-4 col-md-12">&nbsp;<img src="images/img-time.png" alt="Tamara Brčić" class="img-fluid mx-auto d-block benefit-icon"></div>
        <div class="col-lg-8 col-md-12 my-auto text-align-benefit2">&nbsp;
          <h5><i>Optimized training time</i></h5>
-         <p class="text-body-benefit">Is achieved by breaking down content into individual training modules where the learner has the ability to focus on the relevant subject in a one - on - one learning environment without any distractions.</p>     
+         <p class="text-body-benefit">According to studies, e-Training significantly reduces your training time compared to  conventional face-to-face classes while providing your crew with the same knowledge levels. <br> How? By converting your conventional training manuals into interactive modules of approximately 5 to 20 minutes with concise content that is visually presented.  An individual approach ensures crew members are focused on training relevant content thus, excluding factors which lose valuable training time.</p>     
          </div>
        </div>
      </div>
@@ -119,7 +119,7 @@
      <div class="row">       
        <div class="col-lg-4 offset-lg-8 col-md-12">&nbsp;<img src="images/img-consistency.png" alt="abstract graphic with identical pyramids" class="img-fluid mx-auto d-block benefit-icon"></div>
        <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit">&nbsp;<h5><i>Consistency</i></h5>
-         <p class="text-body-benefit">Our courses deliver consistency in content no matter which individual is guiding the training.</p></div>  
+         <p class="text-body-benefit">Unlike instructor-led-training, where content can vary with each training manager, e-Training provides identical and consistent content to each employee  throughout the entire fleet.</p></div>  
        </div>
      </div>
  </div>
@@ -132,7 +132,7 @@
        <div class="col-lg-4 col-md-12">&nbsp;<img src="images/img-flexible.png" alt="man is reading on a tablet" class="img-fluid mx-auto d-block benefit-icon"></div>
        <div class="col-lg-8 col-md-12 my-auto text-align-benefit2">&nbsp;
          <h5><i>Flexible training time</i></h5>
-         <p class="text-body-benefit">Training courses are built to provide flexible access to learners from various devices. Once enrolled, learners can take the course and revisit training content at any time.</p>     
+         <p class="text-body-benefit">e-Training courses are built to provide flexible access to learners across various devices. Once enrolled, learners can take the course and revisit training content at any time. <br> This means that employees can learn in their own time as everyone has their own busy schedules, so employees can access their learning when they have time, and when their energy levels and focus are maximized for retention.</p>     
          </div>
        </div>
      </div>
@@ -143,8 +143,8 @@
    <div class="container">
      <div class="row">       
        <div class="col-lg-4 offset-lg-8 col-md-12">&nbsp;<img src="images/img-scalable.png" alt="hand drawing a graphic" class="img-fluid mx-auto d-block benefit-icon"></div>
-       <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit">&nbsp;<h5><i>Scalable training goals</i></h5>
-         <p class="text-body-benefit">Our customized courses feature interactive elements and challenges that keep your employees focused and engaged the entire time. Learning content is presented visually and creatively through imagery, video and animation that aid to explain even complex workflows.</p></div>  
+       <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit1">&nbsp;<h5><i>Scalable training goals</i></h5>
+         <p class="text-body-benefit">As your company grows together with your number of employees, existing training methods and development processes quickly become ineffective. e-Training liberates your company from the constraints of a busy onboard schedule by not requiring a central location and a specific time to train your personnel. Material can be accessed anywhere and anytime making your training effortless and scaled to meet demand.</p></div>  
        </div>
      </div>
  </div>	 
@@ -157,7 +157,7 @@
        <div class="col-lg-4 col-md-12">&nbsp;<img src="images/img-world.png" alt="digital connectivity of the world" class="img-fluid mx-auto d-block benefit-icon"></div>
        <div class="col-lg-8 col-md-12 my-auto text-align-benefit2">&nbsp;
          <h5><i>World-accessibility</i></h5>
-         <p class="text-body-benefit">Is achieved by breaking down content into individual training modules where the learner has the ability to focus on the relevant subject in a 1-on-1 learning environment without any distractions.</p>     
+         <p class="text-body-benefit">With e-Training your course material is available anytime and anywhere you need it. Employees can be enrolled and prepared for work on board or even before joining the ship.</p>     
          </div>
        </div>
      </div>
@@ -168,8 +168,8 @@
    <div class="container">
      <div class="row">       
        <div class="col-lg-4 offset-lg-8 col-md-12">&nbsp;<img src="images/img-retention.png" alt="fists bump over a table" class="img-fluid mx-auto d-block benefit-icon"></div>
-       <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit">&nbsp;<h5><i>Higher retention</i></h5>
-         <p class="text-body-benefit">Our courses deliver consistency in content no matter which individual is conducting the training.</p></div>  
+       <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit1">&nbsp;<h5><i>Higher retention</i></h5>
+         <p class="text-body-benefit"> e-Training courses contain more interactive tools than comparable in-classroom instructional sessions. Our modules allow learners to take interactive quizzes, think critically about work scenarios, and even view interactive videos. Interactive content has been proven to boost learner engagement – making e-Training an even more effective learning tool.</p></div>  
        </div>
      </div>
  </div>	 	 
@@ -182,7 +182,7 @@
        <div class="col-lg-4 col-md-12">&nbsp;<img src="images/img-cost.png" alt="piggy bank" class="img-fluid mx-auto d-block benefit-icon"></div>
        <div class="col-lg-8 col-md-12 my-auto text-align-benefit2">&nbsp;
          <h5><i>Cost-saving</i></h5>
-         <p class="text-body-benefit">Training courses are built to provide flexible access to learners from various devices. Once enrolled, learners can take the course and revisit training content at any time.</p>     
+         <p class="text-body-benefit">With a one-time investment into the conversion of your training material to e-Training courses, course modules can be used as often and for as many crew members as needed, eliminating the added cost of administration and printed materials.</p>     
          </div>
        </div>
      </div>
@@ -192,16 +192,11 @@
    <div class="container">
      <div class="row">       
        <div class="col-lg-4 offset-lg-8 col-md-12">&nbsp;<img src="images/img-reporting.png" alt="fists bump over a table" class="img-fluid mx-auto d-block benefit-icon"></div>
-       <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit">&nbsp;<h5><i>Reporting</i></h5>
-         <p class="text-body-benefit">Our courses deliver consistency in content no matter which individual is conducting the training.</p></div>  
+       <div class="col-lg-8 col-md-12 col-xl-8 text-align-benefit1">&nbsp;<h5><i>Reporting</i></h5>
+         <p class="text-body-benefit"> e-Training courses allow in combination with a Learning Management System to enhance the performance of crew members through tracking and reporting tools. Progress of employees can be tracked and analyzed in real-time in order to identify and address areas that need improvement.</p></div>  
        </div>
      </div>
  </div>	 
-	 
-	 
-	 
-	 
-	 
 	 
 	 
 	 
